# uniprot-fasta-header

./: Cargo.toml  README.md
src/: error.rs  lib.rs  parser.rs  uniprotkb.rs  uniprotkb_isoform.rs
tests/: uniprotkb.rs  uniprotkb_iso.rs
tests/assets/: E_coli_headers.txt  agl27_arath_iso.txt
