[package]
name = "uniprot-fasta-header"
version = "0.1.0"
authors = ["Jean Manguy <jean@manguy.eu>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/jeanmanguy/uniprot-fasta-header"
homepage = "https://github.com/jeanmanguy/uniprot-fasta-header"
keywords = ["uniprot", "bioinformatics", "parsing"]
categories = ["science"]
license = "Apache-2.0"
publish = false


[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "5.1"