[package]
name = "uniprot-fasta-header"
version = "0.1.0"
authors = ["Jean Manguy <jean@manguy.eu>"]
edition = "2018"
readme = "README.md"
repository = "https://github.com/jeanmanguy/uniprot-fasta-header"
homepage = "https://github.com/jeanmanguy/uniprot-fasta-header"
keywords = ["uniprot", "bioinformatics", "parsing"]
categories = ["science"]
license = "Apache-2.0"
publish = false
exclude = ["tests"]

[features]
serilize = ["serde"]

[lib]
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = { version = "5.1", features = ["regexp"]}
displaydoc = "0.1"
thiserror = "1.0"
regex = "1.3"
once_cell = "1.4"
serde = { version = "1.0", optional = true, features = ["derive"] }

[dev-dependencies]
pretty_assertions = "^0.6"
test-case = "1.0"
elapsed = "0.1"